--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <h1>Hello</h1>
-    <script src="./script/index.js"></script>
+    <script src="./script/script.js"></script>
 </body>
 </html>
